@@ -9,6 +9,7 @@ Revision history for Perl extension App::Info.
         returned by search_bin_dirs() in App::Info::HTTPD::Apache.
       - Added "httpd2" to the list of names returned by search_exe_names() in
         App::Info::HTTPD::Apache.
+      - Fixed tests in t/apache_info.t to pass on Windows.
 
 0.48  2006-02-05T03:09:38
       - Added support for Apache2 to App::Info::HTTPD::Apache.
